--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
 
 
     </main>
-
+    
+    <script src="https://unpkg.com/kaboom/dist/kaboom.js"></script>
+    <script type="text/javascript" src="index.js"></script>
 
 </body>
-<script type="text/javascript" src="index.js"></script>
+
+
 
 </html>
