most of the project completed

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     </nav>
     <main>
         <div>
-            <button id="start" type="button">Start</button>
-            <button id="instructions" type="submit">HOW TO PLAY</button>
+            <button id="start" class="button" type="button">START</button>
+            <button id="instructions" class="button"type="submit">HOW TO PLAY</button>
         </div>
     </main>
     <script src="https://unpkg.com/kaboom/dist/kaboom.js"></script>
