--- a/instructions.html
+++ b/instructions.html
@@ -8,6 +8,72 @@
 </head>
 <body>
     <button id="pause" type="submit"></button>
+    
+     <div class="gridcontainer2">
+
+
+                <div class="box-9">
+
+                    <h3>Premium Materials</h3>
+                    <p>
+
+
+                        Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.
+                    </p>
+
+                </div>
+                <div class="box-8">
+
+
+                    <img src="Ha.PNG"></img>
+
+                </div>
+
+            </div>
+
+            <div class="gridcontainer3">
+
+
+                <div class="box-10">
+
+                    <h4>Fast Shipping</h4>
+                    <p>
+
+
+                        We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.
+                    </p>
+
+                </div>
+                <div class="box-12">
+
+
+                    <img src="5.PNG" />
+
+                </div>
+
+            </div>
+
+            <div class="gridcontainer4">
+
+
+                <div class="box-13">
+
+                    <h4>Quality Assurance</h4>
+                    <p>
+
+
+                        For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.
+                    </p>
+
+                </div>
+                <div class="box-14">
+
+
+                    <img src="6.PNG" />
+
+                </div>
+
+            </div>
 </body>
 <script type="text/javascript" src="index.js"></script>
 </html>
