--- a/index.html
+++ b/index.html
@@ -5,19 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css" type="text/css" />
+    <script src="https://kit.fontawesome.com/787b4d8b0c.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
-<body>
-    <nav id="theNav">
-        <h1>Sandwich Dash</h1>
-    </nav>
-    <main>
-        <div>
-            <button id="start" type="button">Start</button>
-            <button id="instructions" type="submit">HOW TO PLAY</button>
-        </div>
-    </main>
-    <script src="https://unpkg.com/kaboom/dist/kaboom.js"></script>
-    <script type="text/javascript" src="index.js"></script>
-</body>
+    <body>
+
+        <nav id="theNav">
+            <h1><a>SandwichDash</a></h1>
+        </nav>
+
+        <main>
+            <div class="BTNs">
+
+                <div class="startBTN">
+                    <button id="start" type="submit">Start</button>
+                </div>
+
+                <div class="htpBTN">
+                    <button id="instructions" type="submit">HOW TO PLAY</button>
+                </div>
+                
+            </div>
+
+            <div>
+                <i class="fa-solid fa-music-note"></i>
+            </div>
+        </main>
+
+
+        <script src="https://unpkg.com/kaboom/dist/kaboom.js"></script>
+        <script type="text/javascript" src="index.js"></script>
+
+    </body>
+
 </html>
