finalizing before merge

--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 </head>
     <body>
 
-        <nav id="theNav">
+        <!-- <nav id="theNav">
             <h1><a>SandwichDash</a></h1>
-        </nav>
+        </nav> -->
 
         <main>
             <div class="BTNs">
 
                 <div class="startBTN">
-                    <button id="start" type="submit">Start</button>
+                    <!-- <button id="start" type="submit">Start</button> -->
                 </div>
 
                 <div class="htpBTN">
-                    <button id="instructions" type="submit">HOW TO PLAY</button>
+                    <!-- <button id="instructions" type="submit">HOW TO PLAY</button> -->
                 </div>
                 
             </div>
