--- a/instructions.html
+++ b/instructions.html
@@ -15,11 +15,10 @@
 
                 <div class="box-9">
 
-                    <h3>Premium Materials</h3>
+                    <h3>How To Play</h3>
                     <p>
 
-
-                        Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.
+Stack as many burgers as possible in the time alotted to raise your high score
                     </p>
 
                 </div>
@@ -37,12 +36,11 @@
 
                 <div class="box-10">
 
-                    <h4>Fast Shipping</h4>
+                    <h4>Avoid Toxic Items</h4>
                     <p>
 
 
-                        We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.
-                    </p>
+                        Avoid Yucky items so that you dont get the ick!
 
                 </div>
                 <div class="box-12">
@@ -59,12 +57,11 @@
 
                 <div class="box-13">
 
-                    <h4>Quality Assurance</h4>
+                    <h4>Don't run out of time</h4>
                     <p>
 
 
-                        For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.
-                    </p>
+                       Be mindful of the timer.
 
                 </div>
                 <div class="box-14">
