--- a/instructions.html
+++ b/instructions.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="instructions.css" type="text/css" />
+    <link rel="stylesheet" href="grid.css" type="text/css" />
 </head>
 <body>
     <button id="pause" type="submit"></button>
