--- a/instructions.html
+++ b/instructions.html
@@ -9,17 +9,26 @@
     <link rel="stylesheet" href="grid.css" type="text/css" />
 </head>
 <body>
-    <button id="pause" type="submit"></button>
-    
-     <div class="gridcontainer2">
+  <button class ="btn" id="openOverLay">How To Play</button>
+<div class="overlay">
+    <div class="info">
+        <div class="close" id="closeOverLay">&times;</div>
+        <h2>How To Play</h2>
+        <p>Stack as many burgers as possible in the given time</p>
+        <p>Avoid toxic items to not get the ick!</p>
+    </div>
+</div>
+
+  <div class="gridcontainer2">
 
 
                 <div class="box-9">
 
-                    <h3>How To Play</h3>
+                    <h3>Premium Materials</h3>
                     <p>
 
-Stack as many burgers as possible in the time alotted to raise your high score
+
+                        Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.
                     </p>
 
                 </div>
@@ -37,11 +46,12 @@ Stack as many burgers as possible in the time alotted to raise your high score
 
                 <div class="box-10">
 
-                    <h4>Avoid Toxic Items</h4>
+                    <h4>Fast Shipping</h4>
                     <p>
 
 
-                        Avoid Yucky items so that you dont get the ick!
+                        We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.
+                    </p>
 
                 </div>
                 <div class="box-12">
@@ -58,11 +68,12 @@ Stack as many burgers as possible in the time alotted to raise your high score
 
                 <div class="box-13">
 
-                    <h4>Don't run out of time</h4>
+                    <h4>Quality Assurance</h4>
                     <p>
 
 
-                       Be mindful of the timer.
+                        For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.
+                    </p>
 
                 </div>
                 <div class="box-14">
@@ -74,5 +85,6 @@ Stack as many burgers as possible in the time alotted to raise your high score
 
             </div>
 </body>
-<script type="text/javascript" src="index.js"></script>
+
+<script type="text/javascript" src="script.js"></script>
 </html>
