--- a/instructions.html
+++ b/instructions.html
@@ -4,86 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>How To Play</title>
     <link rel="stylesheet" href="instructions.css" type="text/css" />
     <link rel="stylesheet" href="grid.css" type="text/css" />
 </head>
 <body>
-  <button class ="btn" id="openOverLay">How To Play</button>
+
 <div class="overlay">
     <div class="info">
         <div class="close" id="closeOverLay">&times;</div>
         <h2>How To Play</h2>
-        <p>Stack as many burgers as possible in the given time</p>
+        <p>Collect as many ingredients as possible in the given time</p>
         <p>Avoid toxic items to not get the ick!</p>
+         <p>Try to get as many non-toxic items as possible so that you can increase your score</p>
+         <p>Increase your high score!</p>
+        <p>Use the arrow keys or keypad!</p>
     </div>
 </div>
 
-  <div class="gridcontainer2">
-
-
-                <div class="box-9">
-
-                    <h3>Premium Materials</h3>
-                    <p>
-
-
-                        Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.
-                    </p>
-
-                </div>
-                <div class="box-8">
-
-
-                    <img src="Ha.PNG"></img>
-
-                </div>
-
-            </div>
-
-            <div class="gridcontainer3">
-
-
-                <div class="box-10">
-
-                    <h4>Fast Shipping</h4>
-                    <p>
-
-
-                        We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.
-                    </p>
-
-                </div>
-                <div class="box-12">
-
-
-                    <img src="5.PNG" />
-
-                </div>
-
-            </div>
-
-            <div class="gridcontainer4">
-
-
-                <div class="box-13">
-
-                    <h4>Quality Assurance</h4>
-                    <p>
-
-
-                        For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.
-                    </p>
-
-                </div>
-                <div class="box-14">
-
-
-                    <img src="6.PNG" />
-
-                </div>
-
-            </div>
+ 
 </body>
 
 <script type="text/javascript" src="script.js"></script>
